--- a/docker/Dockerfile.jazzy
+++ b/docker/Dockerfile.jazzy
@@ -103,7 +103,6 @@ ENV DISPLAY=:0
 ENV QT_X11_NO_MITSHM=1
 ENV LD_LIBRARY_PATH=/opt/ros/$ROS_DISTRO/lib:/usr/local/lib:$LD_LIBRARY_PATH
 
-
 # Install runtime dependencies
 RUN apt-get update && apt-get install -y \
     ros-$ROS_DISTRO-rmw-cyclonedds-cpp \
@@ -114,6 +113,17 @@ RUN apt-get update && apt-get install -y \
     ros-$ROS_DISTRO-ros2-control \
     ros-$ROS_DISTRO-ros2-controllers \
     ros-$ROS_DISTRO-joint-state-publisher-gui
+
+# Intel Realsense setup
+RUN apt remove -y ros-jazzy-librealsense2 && apt autoremove -y && \
+    cd ~ && mkdir src && cd src && \
+    git clone https://github.com/IntelRealSense/librealsense.git && \
+    cd librealsense && \    
+    mkdir build && \
+    cd build && \
+    cmake .. -DCMAKE_BUILD_TYPE=Release -DBUILD_NETWORK_DEVICE=OFF -DBUILD_WITH_TM2=OFF && \
+    make -j$(nproc) && \
+    make install
 
 # Copy full workspace
 COPY --from=builder ${ROS_WS} ${ROS_WS}
