--- a/docker/Dockerfile.jazzy
+++ b/docker/Dockerfile.jazzy
@@ -6,8 +6,6 @@
 FROM docker.io/osrf/ros:jazzy-desktop-full as builder
 
 ENV SHELL=/bin/bash
-ENV ROS_AUTOMATIC_DISCOVERY_RANGE=SUBNET
-ENV RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
 ENV PIP_BREAK_SYSTEM_PACKAGES=1
 ENV TZ="Europe/Berlin"
 ENV ROS_WS=/ros2_ws
@@ -21,52 +19,44 @@ WORKDIR ${ROS_WS}
 
 # Install dependencies
 RUN apt-get update && \
-    apt-get upgrade -y && \
-    apt-get install -y \
+    apt-get -y upgrade && \
+    apt-get install -y \    
     git \
     wget \
-    curl \
-    gnupg \
-    lsb-release \
     apt-transport-https \
     unzip \
-    gpg \
+    gpg \    
+    black \
     ccache \
-    build-essential \
-    cmake \
-    pkg-config \
-    libeigen3-dev \
-    libboost-all-dev \
-    liburdfdom-dev \
-    liburdfdom-headers-dev \
-    liboctomap-dev \
+    clang-format \
+    clang-format-14 \
     python3-pip \
-    python3-dev \
-    python3-numpy \
     python3-vcstool \
-    python3-colcon-common-extensions \
-    python3-colcon-mixin \
-    python3-pandas \
+    python3-colcon-common-extensions \ 
+    python3-colcon-mixin \ 
+    python3-pandas \ 
+    pipx \
+    gdb \
+    xterm \
+    x11-apps \
     ros-$ROS_DISTRO-rmw-cyclonedds-cpp \
     ros-$ROS_DISTRO-rqt-runtime-monitor \
     ros-$ROS_DISTRO-rqt-robot-monitor \
     ros-$ROS_DISTRO-plotjuggler \
     ros-$ROS_DISTRO-plotjuggler-ros \
     ros-$ROS_DISTRO-ros2controlcli \
-    ros-$ROS_DISTRO-joy \
+    ros-$ROS_DISTRO-joy \    
     ros-$ROS_DISTRO-rosbridge-suite \
-    ros-$ROS_DISTRO-moveit \
-    ros-$ROS_DISTRO-ros2-control \
-    ros-$ROS_DISTRO-ros2-controllers \
-    ros-$ROS_DISTRO-realsense2* \
-    && apt-get clean
+    ros-$ROS_DISTRO-pick-ik \
+    ros-$ROS_DISTRO-realsense2* && \
+    pip install pre-commit --break-system-packages
 
 # colcon mixin setup
 COPY scripts/colcon_mixin.sh /root/
 RUN sed -i 's/\r$//' /root/colcon_mixin.sh && chmod +x /root/colcon_mixin.sh
 RUN bash /root/colcon_mixin.sh && colcon mixin update default
 
-RUN --mount=type=secret,id=GIT_AUTH_TOKEN \
+RUN --mount=type=secret,id=GIT_AUTH_TOKEN \        
     GIT_AUTH_TOKEN=$(cat /run/secrets/GIT_AUTH_TOKEN) && \
     git config --global credential.helper store && \
     echo "https://${GIT_AUTH_TOKEN}:x-oauth-basic@github.com" > ~/.git-credentials
@@ -74,6 +64,13 @@ RUN --mount=type=secret,id=GIT_AUTH_TOKEN \
 # Clone repos
 COPY ../${REPOS_LIST} /root/${ROS_WS}/
 RUN vcs import ${ROS_WS}/src < /root/${ROS_WS}/${REPOS_LIST}
+
+# rosdep
+RUN apt-get update && \
+    bash /root/colcon_mixin.sh && \
+    colcon mixin update default && \
+    rosdep update && \
+    rosdep install -r --from-paths src --ignore-src --rosdistro $ROS_DISTRO --skip-keys=librealsense2 -y
 
 # Intel Realsense setup
 RUN apt remove -y ros-jazzy-librealsense2 && apt autoremove -y && \
@@ -86,11 +83,6 @@ RUN apt remove -y ros-jazzy-librealsense2 && apt autoremove -y && \
     make -j$(nproc) && \
     make install
 
-# rosdep
-RUN apt-get update && rosdep fix-permissions
-RUN rosdep update
-RUN rosdep install -r --from-paths src --ignore-src --rosdistro $ROS_DISTRO -y
-
 # Build
 RUN . /opt/ros/$ROS_DISTRO/setup.sh && \
     export CMAKE_PREFIX_PATH=/usr/local:$CMAKE_PREFIX_PATH && \
@@ -102,8 +94,6 @@ RUN . /opt/ros/$ROS_DISTRO/setup.sh && \
 FROM docker.io/osrf/ros:jazzy-desktop-full
 
 ENV SHELL=/bin/bash
-ENV ROS_AUTOMATIC_DISCOVERY_RANGE=SUBNET
-ENV RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
 ENV TZ="Europe/Berlin"
 ENV ROS_WS=/ros2_ws
 ENV DISPLAY=:0
@@ -126,9 +116,10 @@ COPY --from=builder ${ROS_WS} ${ROS_WS}
 
 WORKDIR ${ROS_WS}
 
-# rosdep
-RUN apt-get update && rosdep fix-permissions
-RUN rosdep update
-RUN rosdep install -r --from-paths src --ignore-src --rosdistro $ROS_DISTRO -y
+# Rosdep
+RUN apt-get update && \    
+    colcon mixin update default && \
+    rosdep update && \
+    rosdep install -r --from-paths src --ignore-src --rosdistro $ROS_DISTRO --skip-keys=librealsense2 -y
 
 CMD ["/bin/bash", "-c", "source /opt/ros/$ROS_DISTRO/setup.bash && source /ros2_ws/install/setup.bash && exec /bin/bash"]
