--- a/docker/Dockerfile.jazzy
+++ b/docker/Dockerfile.jazzy
@@ -9,8 +9,6 @@ ENV SHELL=/bin/bash
 ENV PIP_BREAK_SYSTEM_PACKAGES=1
 ENV TZ="Europe/Berlin"
 ENV ROS_WS=/ros2_ws
-ENV DISPLAY=:0
-ENV QT_X11_NO_MITSHM=1
 ENV REPOS_LIST=repos.list
 
 # Create workspace
@@ -96,9 +94,6 @@ FROM docker.io/osrf/ros:jazzy-desktop-full
 ENV SHELL=/bin/bash
 ENV TZ="Europe/Berlin"
 ENV ROS_WS=/ros2_ws
-ENV DISPLAY=:0
-ENV QT_X11_NO_MITSHM=1
-ENV LD_LIBRARY_PATH=/opt/ros/$ROS_DISTRO/lib:/usr/local/lib:$LD_LIBRARY_PATH
 
 # Install runtime dependencies
 RUN apt-get update && apt-get install -y \
@@ -111,15 +106,27 @@ RUN apt-get update && apt-get install -y \
     ros-$ROS_DISTRO-ros2-controllers \
     ros-$ROS_DISTRO-joint-state-publisher-gui
 
+RUN git clone --depth=1 https://github.com/Bash-it/bash-it.git ~/.bash_it && \
+    bash ~/.bash_it/install.sh
+
 # Copy full workspace
 COPY --from=builder ${ROS_WS} ${ROS_WS}
+
+# Copy a bit of config
+COPY config/ /root/
+RUN touch /root/.bash_history && \
+    find /root/ -type f -exec sed -i 's/\r$//' {} +
 
 WORKDIR ${ROS_WS}
 
 # Rosdep
-RUN apt-get update && \    
-    colcon mixin update default && \
+RUN apt update && \
     rosdep update && \
-    rosdep install -r --from-paths src --ignore-src --rosdistro $ROS_DISTRO --skip-keys=librealsense2 -y
+    rosdep install -r --from-paths src --ignore-src --rosdistro $ROS_DISTRO --skip-keys=librealsense2 -y && \
+    apt -y clean
 
-CMD ["/bin/bash", "-c", "source /opt/ros/$ROS_DISTRO/setup.bash && source /ros2_ws/install/setup.bash && exec /bin/bash"]
+RUN mkdir -p /root/.cache/history && \
+    touch /root/.cache/history/history.log && \
+    ln -sf /root/.cache/history/history.log /root/.bash_history
+
+ENTRYPOINT [ "/bin/bash" ]
